# axum-railway-template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: config.rs  main.rs
